Fixed CSS issue when form was leaking out of the screen if you added more items than could fit in 100vh. Key attribute of list is now on proper item (ToDo istead of li)

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -8,5 +8,5 @@
     align-items: center;
     align-content: center;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
 }
